# acp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  acp.c  acp.pc.in  acp_cobs.c  acp_cobs.h  acp_config.h  acp_constants.c  acp_crc16.c  acp_crc16.h  acp_crypto.c  acp_crypto.c.backup  acp_crypto.h  acp_crypto_stub.c  acp_errors.h  acp_framer.c  acp_framer.c.legacy  acp_framer_stub.c  acp_legacy_stubs.c  acp_nvs.c  acp_platform_keystore.h  acp_platform_log.h  acp_platform_mutex.h  acp_platform_posix.c  acp_platform_time.h  acp_platform_windows.c  acp_protocol.h  acp_session.c  acp_session.c.legacy  acp_session.h  acp_session_test.h  acp_version.h  acp_visibility.h  test_cobs  test_cobs.c  test_telemetry  test_telemetry.c
.github/: copilot-instructions.md
.github/workflows/: build.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
cmake/: acpConfig.cmake.in
docs/: BUILD.md  Doxyfile  acp_comm_spec_v0-2.md  acp_comm_spec_v0-3.md  crc16.md  keystore.md
docs/docs/html/: acp_8c.html  acp__cobs_8c.html  acp__cobs_8c_source.html  acp__cobs_8h.html  acp__cobs_8h.js  acp__cobs_8h_source.html  acp__config_8h.html  acp__config_8h_source.html  acp__constants_8c.js  acp__constants_8c_source.html  acp__crc16_8c.js  acp__crc16_8h.html  acp__crypto_8c.html  acp__errors_8h.html  acp__errors_8h_source.html  acp__framer_8c.html  acp__framer_8c.js  acp__nvs_8c.js  acp__platform__keystore_8h.js  acp__platform__mutex_8h.html  acp__platform__mutex_8h.js  acp__platform__mutex_8h_source.html  acp__platform__posix_8c.js  acp__platform__posix_8c_source.html  acp__platform__time_8h.html  acp__protocol_8h.html  acp__session_8c.html  acp__session_8c.js  acp__session__test_8h.html  acp__visibility_8h.html  annotated.html  annotated_dup.js  classes.html  dir_57173fafa99613d5a37701f691a0338c.html  dir_5981d9ab5fdcd49de480fe3f3bceb4ff.html  dir_72dd63a604b4049b96e472af8c943e4b.html  dir_72dd63a604b4049b96e472af8c943e4b.js  dir_91e1052545b10a84a807bfaead38fac9.html  dir_9a25dcd950065d48fab8d6d06299a63b.html  dir_afefc5616f88bc1cf3c9332132fcba1e.html  (+45 more)
docs/docs/html/search/: all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_3.js  all_4.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  functions_1.js  pages_0.js  pages_1.js  pages_10.js  pages_11.js  pages_12.js  pages_13.js  pages_14.js  pages_15.js  pages_16.js  pages_18.js  (+29 more)
docs/html/: _0ddocument.html  _accel_sensor_8h_source.html  _actuator_8h_source.html  _baro_b_m_p085_8h_source.html  _baro_b_m_p280_8h_source.html  _baro_device_8h_source.html  _baro_s_p_l06_8h_source.html  _baro_sensor_8h_source.html  _base_sensor_8h_source.html  _blackbox_bridge_8h_source.html  _blackbox_serial_buffer_8h_source.html  _bus_aware_device_8h_source.html  _bus_device_8h_source.html  _bus_i2_c_8h_source.html  _bus_s_p_i_8h_source.html  _bus_slave_8h_source.html  _c_make_c_compiler_id_8c_source.html  _citadel_2src_2config_8h_source.html  _citadel_2src_2main_8c_source.html  _citadel_2src_2serial_8h_source.html  _controller_8h_source.html  _crsf_8h_source.html  _debug___espfc_8h_source.html  _esc_driver_8h_source.html  _esc_driver_esp32_8h_source.html  _esc_driver_esp32c3_8h_source.html  _esc_driver_esp8266_8h_source.html  _esc_driver_r_p2040_8h_source.html  _esp_wire_8h_source.html  _espfc_2src_2_control_2pid_8h_source.html  _espfc_2src_2_output_2mixer_8h_source.html  _espfc_2src_2_utils_2timer_8h_source.html  _espfc_8h_source.html  _filter_8h_source.html  _filter_helper_8h_source.html  _flash_device_8h_source.html  _fusion_8h_source.html  _gpio_8h_source.html  _gyro_b_m_i160_8h_source.html  _gyro_device_8h_source.html  (+3055 more)
docs/html/search/: all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_24.js  all_25.js  all_26.js  all_28.js  all_2b.js  all_2d.js  all_2f.js  all_3.js  all_30.js  all_31.js  all_36.js  all_37.js  all_38.js  all_39.js  all_3d.js  all_4.js  all_42.js  all_43.js  all_47.js  (+223 more)
examples/: CMakeLists.txt  acp_client.c  mock_serial.c
specs/001-acp-protocol-spec/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-acp-protocol-spec/checklists/: requirements.md
specs/001-acp-protocol-spec/contracts/: c-api.md
tests/: BuildSystemTests.cmake  CMakeLists.txt  acp_feature_test.c  build_test.sh  byte_order_test.c  crc_mismatch_test.c  feature_test  hmac_test  hmac_test.c  no_heap_check.c  payload_boundary_test.c  test_cobs.c  test_command_auth_rejection  test_command_auth_rejection.c  test_conditional_sequence  test_conditional_sequence.c  test_hmac.c  test_hmac_integration  test_hmac_integration.c  test_hmac_tag_rejection  test_hmac_tag_rejection.c  test_hmac_vectors  test_hmac_vectors.c  test_keystore_integration  test_keystore_integration.c  test_replay_protection  test_replay_protection.c  test_session.c  test_telemetry.c  test_windows_build.c  validate_build.sh
